<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/triangulo"
        android:textAlignment="center"
        android:textSize="36dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_altura" />

        <EditText
            android:id="@+id/txtAlturaTriangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtTriangulo"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/valor_base" />

        <EditText
            android:id="@+id/txtBaseTriangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="428dp"
        android:layout_alignEnd="@+id/txtTriangulo"
        android:layout_alignRight="@+id/txtTriangulo"
        android:layout_below="@+id/txtValorRadio"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:weightSum="1">

        <Button
            android:id="@+id/botton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.04"
            android:onClick="areaTriangulo"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/botton2"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:onClick="borrar"
            android:text="@string/borrar" />
    </LinearLayout>

</LinearLayout>