<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="Circulo"
        android:text="@string/circulo"
        android:textAlignment="center"
        android:textSize="36dp" />

    <LinearLayout
        android:id="@+id/txtValorRadio"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignEnd="@+id/txtCirculo"
        android:layout_alignRight="@+id/txtCirculo"
        android:layout_below="@+id/txtCirculo"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtCirculo"
            android:text="@string/valor_del_radio"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtValorRadio"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:onClick="areaCirculo" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/borrar"
            android:onClick="borrar"/>
    </LinearLayout>

</LinearLayout>