<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cilindro"
        android:textAlignment="center"
        android:textSize="36dp" />

    <LinearLayout
        android:id="@+id/txtValorRadio"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_alignEnd="@+id/txtCilindro"
        android:layout_alignRight="@+id/txtCilindro"
        android:layout_below="@+id/txtCilindro"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_del_radio"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtRadiio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_alignEnd="@+id/txtCilindro"
        android:layout_alignRight="@+id/txtCilindro"
        android:layout_below="@+id/txtValorRadio"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_altura"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtAlturaTriangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/txtValorRadio"
        android:layout_alignStart="@+id/txtValorRadio"
        android:layout_below="@+id/linearLayout2"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtCilindro"
            android:layout_alignStart="@+id/txtCilindro"
            android:layout_below="@+id/linearLayout2"
            android:layout_weight="0.76"
            android:text="@string/calcular"
            android:onClick="volumenCilindro"
            />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button"
            android:layout_toEndOf="@+id/button"
            android:layout_toRightOf="@+id/button"
            android:layout_weight="0.18"
            android:text="@string/borrar"
            android:onClick="borrar"
            />
    </LinearLayout>

</LinearLayout>