<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cono"
        android:textAlignment="center"
        android:textSize="36dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_below="@+id/txtCono"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/valor_del_radio"
            android:textIsSelectable="false"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtRadiio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignEnd="@+id/linearLayout3"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_altura"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtAlturaTriangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.87"
            android:elevation="1dp"
            android:onClick="volumenCono"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:onClick="borrar"
            android:text="Borrar" />
    </LinearLayout>

</LinearLayout>